fix z-index bug; redo main layout spacing

--- a/css/main.css
+++ b/css/main.css
@@ -181,6 +181,7 @@ main navigation
   top: 2rem;
   right: 2rem;
   font-size: 2rem;
+  z-index: 110;
 }
 
 /*
@@ -195,6 +196,7 @@ intro
   background-size: cover;
   background-position: bottom;
   background-attachment: fixed;
+  z-index: 10;
 }
 .intro-content {
 }
@@ -237,16 +239,24 @@ main
 ====================
 */
 
+.main {
+  position: relative;
+  background: hsla(0, 0%, 100%, 1);
+  padding: 8rem 0;
+  z-index: 30;
+}
+
 /* continent spacing */
-.continent {
+.continent + .continent {
   margin: 8rem 0;
 }
 
 /* information unit spacing */
-.information-unit {
-  margin: 8rem 0 2rem 0;
+.country > .information-unit {
+  margin-top: 8rem;
 }
-.unit-title {
+.unit-title,
+.unit-details {
   margin-bottom: 2rem;
 }
 .unit-details {
@@ -306,8 +316,10 @@ contact form
 
 /* form */
 .contact {
+  position: relative;
   color: hsla(187, 68%, 70%, 1);
   background: hsla(187, 68%, 70%, 0.5);
+  z-index: 20;
 }
 form div .column-1-3 {
   height: auto;
